fix: add swagger doc for activate and deactivate and add unittest
