# docs/swagger.yaml
@@ -709,17 +709,22 @@ paths:
       summary: Register a new user
       tags:
       - users
-  /admin/deactivate/{id}:
+  /admin/activate/{id}:
     patch:
       consumes:
       - application/json
-      description: Deactivates the specified account.
+      description: Activates the specified account.
       parameters:
       - description: Account ID
         in: path
         name: id
         required: true
         type: integer
+      - description: Authorization header with Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -735,6 +740,44 @@ paths:
           description: Unprocessable Entity
           schema:
             $ref: '#/definitions/models.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Activate Account
+      tags:
+      - admin
+  /admin/deactivate/{id}:
+    patch:
+      consumes:
+      - application/json
+      description: Deactivates the specified account.
+      parameters:
+      - description: Account ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Authorization header with Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Response'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/models.Response'
+      security:
+      - ApiKeyAuth: []
       summary: Deactivate Account
       tags:
       - admin
@@ -770,6 +813,11 @@ paths:
       - application/json
       description: Register a new admin with the provided details
       parameters:
+      - description: User Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Admin registration details
         in: body
         name: adminRegistrationRequest
@@ -795,6 +843,8 @@ paths:
           description: Can't connect to the database
           schema:
             $ref: '#/definitions/handlers.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Register a new admin
       tags:
       - admin
