# server/admin.go
@@ -15,5 +15,5 @@ func adminRoutes(e *echo.Echo) {
 	e.POST("/admin/add-bad-word/:word", handlers.AddBadWordHandler, middlewares.IsAdmin)
 	e.GET("/admin/search/:word", handlers.SmsSearchHandler, middlewares.IsAdmin)
 	e.PATCH("/admin/deactivate/:id", WithDBConnection(handlers.DeactivateHandler), middlewares.IsAdmin)
-	e.PATCH("/admin/activate/:id", handlers.ActivateHandler, middlewares.IsAdmin)
+	e.PATCH("/admin/activate/:id", WithDBConnection(handlers.ActivateHandler), middlewares.IsAdmin)
 }
